--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,5 +6,10 @@
     = javascript_include_tag "application", "data-turbolinks-track" => true
     = csrf_meta_tags
   %body
-    = render :partial => 'nav'
-    = yield
+    %header#top.navbar.navbar-static-top.bs-docs-nav{:role => "banner"}
+      = render :partial => 'nav'
+    %main
+      .container
+        = yield
+    %footer
+      = render :partial => 'footer'
