--- a/app/views/broadcasts/_form.html.haml
+++ b/app/views/broadcasts/_form.html.haml
@@ -1,9 +1,9 @@
 = form_for @broadcast do |f|
   %h1 Create a Truth
   .input-group
-    = f.text_field :label, :placeholder => 'Title of Oracle', :class => 'form-control'
-    = f.datetime_field :closes_at, :placeholder => 'Date to check', :class => 'form-control'
-    = f.text_field :url, :placeholder => 'Url to page', :class => 'form-control'
+    = f.text_field :label, :placeholder => 'Title of broadcast', :class => 'form-control'
+    = f.datetime_field :closes_at, :placeholder => 'Date to be closed', :class => 'form-control'
+    = f.text_field :url, :placeholder => 'Url', :class => 'form-control'
 
     %div{:role => 'tabpanel'}
       %ul.nav.nav-tabs{:role => 'tablist'}
@@ -14,7 +14,7 @@
 
       .tab-content.clearfix
         #js.tab-pane.active{:role => 'tabpanel'}
-          = f.text_area :match_javascript, :placeholder => 'Javascript', :rows => '7', :class => 'form-control'
+          = f.text_area :match_javascript, :placeholder => 'Javascript', :rows => '6', :class => 'form-control'
         #regex.tab-pane{:role => 'tabpanel'}
           = f.text_area :match_regex, :placeholder => 'Regex', :class => 'form-control'
         .include-jquery
