Added flip effect. Added date and time picker Added timezone form element.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,4 +2,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "bootstrap-theme.min";
+@import "datetimepicker";
+@import "flipper";
 @import "opidoki";
