--- a/app/assets/stylesheets/opidoki.css.scss
+++ b/app/assets/stylesheets/opidoki.css.scss
@@ -40,7 +40,7 @@ header{
     font-weight: 400;
   }
   .form{
-    input, textarea{
+    select, input, textarea{
       border-radius: 6px!important;
       margin: 10px 0;
     }
