--- a/app/views/broadcasts/_form.html.haml
+++ b/app/views/broadcasts/_form.html.haml
@@ -3,7 +3,7 @@
   .input-group
     = f.text_field :label, :placeholder => 'Title of broadcast', :class => 'form-control'
     = f.datetime_field :closes_at, :placeholder => 'Date to be closed', :class => 'form-control pull-left'
-    = select_tag "closes_at[zone]", options_for_select(ActiveSupport::TimeZone.all.collect {|p| [ p.to_s, p.utc_offset ]}), :class => 'form-control'
+    = select_tag "broadcast[closes_at(zone)]", options_for_select(ActiveSupport::TimeZone.all.collect {|p| [ p.to_s, p.utc_offset ]}), :class => 'form-control'
     = f.text_field :url, :placeholder => 'Url', :class => 'form-control'
 
     %div{:role => 'tabpanel'}
