added syntax highlighting added default option selected for time zone select added views for upcoming and expired lists fixed error reporting in modal adjusted the table partial for views adjusted modal styling added a new bg for the header cleaned up the asset pipeline and removed unused libs

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,5 +3,6 @@
 @import "bootstrap";
 @import "bootstrap-theme.min";
 @import "datetimepicker";
+@import "solarized_dark";
 @import "flipper";
 @import "opidoki";
