Added btc price to seed file examples Found a weird bug in syntax highlighting

--- a/app/views/broadcasts/show.html.haml
+++ b/app/views/broadcasts/show.html.haml
@@ -20,7 +20,7 @@
       - when 1
         %h3
           %strong Match Regex
-        %pre.regex
+        %pre.perl
           = @broadcast.match_regex
       - when 2
         %h3
