Production mode fixes

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,6 +3,6 @@
 @import "bootstrap";
 @import "bootstrap-theme.min";
 @import "datetimepicker";
-@import "solarized_dark";
+@import "github";
 @import "flipper";
 @import "opidoki";
