--- a/app/views/broadcasts/_form.html.haml
+++ b/app/views/broadcasts/_form.html.haml
@@ -2,8 +2,8 @@
   %h1 Create a Truth
   .input-group
     = f.text_field :label, :placeholder => "What's the name of this Broadcast?", :class => 'form-control'
-    %input#broadcast_closes_at.form-control.pull-left{:name => "closes_at(time)", :placeholder => "Date/Time to be closed", :type => "datetime"}/
-    = select_tag "closes_at(zone)", options_for_select(ActiveSupport::TimeZone.all.collect {|p| [ p.to_s, p.utc_offset ]}), :class => 'form-control'
+    %input#broadcast_closes_at.form-control.pull-left{:name => "closes_at[time]", :placeholder => "Date/Time to be closed", :type => "datetime"}/
+    = select_tag "closes_at[zone]", options_for_select(ActiveSupport::TimeZone.all.collect {|p| [ p.to_s, p.utc_offset ]}), :class => 'form-control'
     = f.text_field :url, :placeholder => 'Full URL (ie. https://news.google.com)', :class => 'form-control'
 
     %div{:role => 'tabpanel'}
