Final adjustments! This is what was/is demoed to the judges

--- a/app/views/broadcasts/show.html.haml
+++ b/app/views/broadcasts/show.html.haml
@@ -20,6 +20,10 @@
         %h3.closed-at
           %strong Closed at:
           =@broadcast.closed_at
+      - if @broadcast.closed_at && @broadcast.execution_return
+        %h3.execution-return
+          %strong Resolved to:
+          =@broadcast.execution_return.inspect
       - else
         %h3.closes-at
           %strong Closes at:
